# DevAgent

./: DevAgent_Cheatsheet.md  README.md  addition.py  agent.py  app.py  avg_score.json  avg_score.py  basic_math.py  calculator.py  categories.txt  code_tools.py  coffee.html  eval_harness.py  eval_results.json  factorial.py  failure_analysis.json  fib.py  github_tools.py  llm_test.py  main.py  out.json  output.txt  palindrome.py  pyproject.toml  requirements.txt  reverse_list.py  tasks.json  tools.py  vowels.py
data/: count_categories.py  count_summary.py  find_highest_score.py  sample.csv  sample.json  sample_with_pandas.py
logs/: 0c5de8f6.json  1b59a8dd.json  1ff581e6.json  26c9924a.json  2a26908d.json  41e4c6d1.json  432c6c70.json  435d1df3.json  43768cb0.json  448ff6b6.json  52753de7.json  5859f386.json  5bd04b35.json  5db8f4f0.json  60e749cc.json  647d87f5.json  650c1f27.json  6a8023ab.json  70e9f851.json  7ce7d664.json  7e9f53b3.json  80544333.json  86ad80d2.json  9f0d88c2.json  a386584b.json  a568e488.json  b13c8acd.json  b5f2578a.json  bd9f16b7.json  c9d510de.json  cd0578c7.json  df1b11b1.json
