[project]
name = "devagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio==5.23.0",
    "huggingface-hub>=0.20.0",
    "openai>=2.31.0",
    "pdfplumber>=0.11.9",
    "pygithub>=2.9.0",
    "python-dotenv>=1.2.2",
]
